crates/parsing/tests/snapshots/grammar_tests__forall-type-visible.snap
---
source: crates/parsing/tests/grammar_tests.rs
expression: result
---
Input: forall @a. Type
Start { kind: ForallType }
  Token { kind: ForallKw }
  Start { kind: TypeVariableBinding }
    Start { kind: Prefixed }
      Token { kind: At }
      Start { kind: Name }
        Token { kind: Lower }
      Finish
    Finish
  Finish
  Token { kind: Period }
  Start { kind: ConstructorType }
    Token { kind: Upper }
  Finish
Finish

