crates/parsing/tests/snapshots/grammar_tests__guarded-with-expression.snap
---
source: crates/parsing/tests/grammar_tests.rs
expression: result
---
Input: 
do
  let
    a | true = false
Start { kind: DoExpression }
  Start { kind: QualifiedDo }
    Token { kind: DoKw }
  Finish
  Start { kind: OneOrMore }
    Start { kind: DoLetBinding }
      Token { kind: LetKw }
      Start { kind: OneOrMore }
        Start { kind: LetBindingName }
          Start { kind: Name }
            Token { kind: Lower }
          Finish
          Start { kind: ZeroOrMore }
          Finish
          Start { kind: Guarded }
            Token { kind: Pipe }
            Start { kind: Separated }
              Start { kind: PatternGuard }
                Start { kind: LiteralExpression }
                  Token { kind: LiteralTrue }
                Finish
              Finish
            Finish
            Token { kind: Equal }
            Start { kind: WhereExpression }
              Start { kind: LiteralExpression }
                Token { kind: LiteralFalse }
              Finish
            Finish
          Finish
        Finish
      Finish
    Finish
  Finish
Finish

