crates/parsing/tests/snapshots/grammar_tests__guarded-with-pattern.snap
---
source: crates/parsing/tests/grammar_tests.rs
expression: result
---
Input: 
do
  let
    a | Just b <- c
      , Just d <- e = false
Start { kind: DoExpression }
  Start { kind: QualifiedDo }
    Token { kind: DoKw }
  Finish
  Start { kind: OneOrMore }
    Start { kind: DoLetBinding }
      Token { kind: LetKw }
      Start { kind: OneOrMore }
        Start { kind: LetBindingName }
          Start { kind: Name }
            Token { kind: Lower }
          Finish
          Start { kind: ZeroOrMore }
          Finish
          Start { kind: Guarded }
            Token { kind: Pipe }
            Start { kind: Separated }
              Start { kind: PatternGuard }
                Start { kind: ConstructorBinder }
                  Start { kind: QualifiedName }
                    Start { kind: NameRef }
                      Token { kind: Upper }
                    Finish
                  Finish
                  Start { kind: OneOrMore }
                    Start { kind: VariableBinder }
                      Start { kind: Name }
                        Token { kind: Lower }
                      Finish
                    Finish
                  Finish
                Finish
                Token { kind: LeftArrow }
                Start { kind: VariableExpression }
                  Start { kind: QualifiedName }
                    Start { kind: NameRef }
                      Token { kind: Lower }
                    Finish
                  Finish
                Finish
              Finish
              Token { kind: Comma }
              Start { kind: PatternGuard }
                Start { kind: ConstructorBinder }
                  Start { kind: QualifiedName }
                    Start { kind: NameRef }
                      Token { kind: Upper }
                    Finish
                  Finish
                  Start { kind: OneOrMore }
                    Start { kind: VariableBinder }
                      Start { kind: Name }
                        Token { kind: Lower }
                      Finish
                    Finish
                  Finish
                Finish
                Token { kind: LeftArrow }
                Start { kind: VariableExpression }
                  Start { kind: QualifiedName }
                    Start { kind: NameRef }
                      Token { kind: Lower }
                    Finish
                  Finish
                Finish
              Finish
            Finish
            Token { kind: Equal }
            Start { kind: WhereExpression }
              Start { kind: LiteralExpression }
                Token { kind: LiteralFalse }
              Finish
            Finish
          Finish
        Finish
      Finish
    Finish
  Finish
Finish

