crates/parsing/tests/snapshots/grammar_tests__integer-binder.snap
---
source: crates/parsing/tests/grammar_tests.rs
expression: result
---
Input: 1
Start { kind: LiteralBinder }
  Token { kind: LiteralInteger }
Finish

