crates/parsing/tests/snapshots/grammar_tests__kinded-type.snap
---
source: crates/parsing/tests/grammar_tests.rs
expression: result
---
Input: Type :: Type
Start { kind: KindedType }
  Start { kind: ConstructorType }
    Token { kind: Upper }
  Finish
  Token { kind: Colon2 }
  Start { kind: ConstructorType }
    Token { kind: Upper }
  Finish
Finish

