crates/parsing/tests/snapshots/grammar_tests__literal-int.snap
---
source: crates/parsing/tests/grammar_tests.rs
expression: result
---
Input: 1
Token { kind: LiteralInteger }

