crates/parsing/tests/snapshots/grammar_tests__minus-is-operator-name.snap
---
source: crates/parsing/tests/grammar_tests.rs
expression: result
---
Input: (-)
Start { kind: OperatorNameExpression }
  Start { kind: Wrapped }
    Token { kind: LeftParenthesis }
    Start { kind: NameRef }
      Token { kind: Operator }
    Finish
    Token { kind: RightParenthesis }
  Finish
Finish

