crates/parsing/tests/snapshots/grammar_tests__minus-is-operator.snap
---
source: crates/parsing/tests/grammar_tests.rs
expression: result
---
Input: 1 - 2
Start { kind: ExpressionOperatorChain }
  Start { kind: LiteralExpression }
    Token { kind: LiteralInteger }
  Finish
  Start { kind: OneOrMore }
    Start { kind: Pair }
      Token { kind: Operator }
      Start { kind: LiteralExpression }
        Token { kind: LiteralInteger }
      Finish
    Finish
  Finish
Finish

