crates/parsing/tests/snapshots/grammar_tests__multiple-negate-expression.snap
---
source: crates/parsing/tests/grammar_tests.rs
expression: result
---
Input: - -1
Start { kind: NegateExpression }
  Token { kind: Operator }
  Start { kind: NegateExpression }
    Token { kind: Operator }
    Start { kind: LiteralExpression }
      Token { kind: LiteralInteger }
    Finish
  Finish
Finish

